[package]
name = "uarp-dump"
version = "1.1.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
description = "Dumps files from UARP super binaries found in Apple device firmware."
readme = "readme.md"
edition = "2021"
categories = ["command-line-utilities", "parser-implementations", "embedded", "encoding", "parsing"]
keywords = ["uarp", "firmware", "apple", "container"]
repository = "https://github.com/19h/uarp-dump"

[[bin]]
bench = false
path = "src/main.rs"
name = "uarp-dump"

[dependencies]
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
